--- a/src/app/canva/canva.component.scss
+++ b/src/app/canva/canva.component.scss
@@ -1,4 +1,4 @@
-.canvas-container {
+/* .canvas-container {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
@@ -6,15 +6,14 @@
   overflow-x: hidden;
   height: 41em;
   background: rgb(231, 231, 231);
-}
+} */
 
-.canva-holder {
-  // border: 21px solid #00ffc9;
-  transform: scale(0.28);
+/* .canva-holder { */
+// border: 21px solid #00ffc9;
+/* transform: scale(0.28);
   box-shadow: 1px 2px 15px 8px rgb(84, 84, 84);
-}
+} */
 
-@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 .box {
   /* padding: 10px; */
   text-align: left;
