--- a/src/app/canva/canva.component.html
+++ b/src/app/canva/canva.component.html
@@ -1,5 +1,5 @@
-<div class="canvas-container custom-scrollbar">
-  <div *ngFor="let e of [].constructor(10)" class="canva-holder">
+<div class="flex flex-col overflow-y-scroll h-[35.7rem] bg-neutral-900">
+  <div *ngFor="let e of [].constructor(10)" class="shadow-lg scale-[0.28]">
     <div class="outerbox">
       <div class="header">
         <div id="headercontent" align="center"></div>
