--- a/src/app/toolsbar/toolsbar.component.scss
+++ b/src/app/toolsbar/toolsbar.component.scss
@@ -1,17 +1,17 @@
-.sidebar-container {
+/* .sidebar-container {
   display: flex;
   height: 93vh;
   overflow-y: hidden;
-}
-.toolsbar-container {
+} */
+/* .toolsbar-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   background: rgb(70, 0, 141);
   border-radius: 15px 0 0 15px;
   padding: 5px;
-}
-.sidebar-icon {
+} */
+/* .sidebar-icon {
   padding: 0.4em;
   padding-right: 0.9em;
   padding-bottom: 0.9em;
@@ -32,7 +32,6 @@
   color: slateblue;
   transform: scale(1.09);
   border-radius: 15px 0 0 15px;
-
   padding: 35px;
 }
 ::ng-deep .mat-tooltip {
@@ -48,4 +47,4 @@
   overflow-y: hidden;
   height: 97vh;
   padding-left: 10px;
-}
+} */
