updated toolsbar and canva

--- a/src/app/canva/canva.component.html
+++ b/src/app/canva/canva.component.html
@@ -1,5 +1,10 @@
-<div class="flex flex-col overflow-y-scroll h-[35.7rem] bg-neutral-900">
-  <div *ngFor="let e of [].constructor(10)" class="shadow-lg scale-[0.28]">
+<div
+  class="flex flex-col overflow-y-scroll h-[36.8rem] bg-zinc-900 justify-start dark:dark-scroll-v scroll-smooth"
+>
+  <div
+    *ngFor="let e of [].constructor(10)"
+    class="shadow-lg shadow-white scale-[0.27] w-full h-full"
+  >
     <div class="outerbox">
       <div class="header">
         <div id="headercontent" align="center"></div>
