--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="dark:bg-slate-800">
   <p
     class="md:text-5xl text-3xl pt-5 text-center text-gradient-dark dark:text-gradient animate-slide-down font-light font-damion"
   >
