--- a/src/app/user/auth/auth.component.html
+++ b/src/app/user/auth/auth.component.html
@@ -1,6 +1,6 @@
 <!-- screen-container -->
 <div
-  class="flex flex-col items-center justify-start pt-10 min-h-screen login-bg bg-cover bg-no-repeat bg-fixed"
+  class="flex flex-col items-center justify-start pt-10 min-h-full login-bg bg-cover bg-no-repeat bg-fixed"
 >
   <!-- form-container -->
   <div
