--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{ dark: darkMode }">
+<div [ngClass]="{ dark: darkMode }" class="h-full m-0">
   <div
     class="flex flex-row p-2 justify-between items-center bg-gray-100 dark:bg-slate-900/75 transition-colors duration-700 dark:bg-opacity-70 dark:backdrop-blur fixed top-0 min-w-full dark:text-neutral-200 z-50 border-b border-b-slate-900/75 shadow-lg"
   >
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div
-    class="dark:bg-slate-800 dark:text-neutral-100 transition-colors duration-700 h-full pt-[3.5rem]"
+    class="dark:bg-slate-800 dark:text-neutral-100 transition-colors h-full duration-700 pt-[3.5rem]"
   >
     <router-outlet></router-outlet>
   </div>
