--- a/src/app/canvas-toolbar/canvas-toolbar.component.html
+++ b/src/app/canvas-toolbar/canvas-toolbar.component.html
@@ -1,11 +1,31 @@
-<div class="px-2 py-2 flex items-center space-x-2 bg-zinc-800">
-  <select id="font" name="font" [value]="fonts[8].value">
+<div
+  class="px-2 py-3 flex items-center justify-start space-x-1 bg-zinc-800 ring-1 ring-inset ring-zinc-700 dark:text-black"
+>
+  <select
+    id="font"
+    class="form-input p-1 text-lg font-roboto rounded-sm"
+    name="font"
+    [value]="fonts[8].value"
+  >
     <option *ngFor="let font of fonts" [value]="font.value">
       {{ font.name }}
     </option>
   </select>
-  <input matInput type="color" (input)="changeColor()" />
-  <select name="font-size" id="font-size" [value]="fontSizes[8].value">
+  <input
+    id="color"
+    type="color"
+    class="webkit-disable appearance-none border-none w-8 h-8 rounded-sm"
+    [ngStyle]="{ background: colorip.value }"
+    (input)="changeColor()"
+    #colorip
+    value="#8c00ff"
+  />
+  <select
+    class="form-input p-1 text-lg font-roboto rounded-sm"
+    name="font-size"
+    id="font-size"
+    [value]="fontSizes[8].value"
+  >
     <option *ngFor="let fontSize of fontSizes" [value]="fontSize.value">
       {{ fontSize.name }}
     </option>
