--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,9 +1,9 @@
-<as-split direction="horizontal">
-  <as-split-area [size]="35">
+<div class="flex">
+  <div class="w-1/3">
     <app-toolsbar></app-toolsbar>
-  </as-split-area>
-  <as-split-area [size]="65">
+  </div>
+  <div class="w-2/3">
     <app-canvas-toolbar></app-canvas-toolbar>
     <app-canva></app-canva>
-  </as-split-area>
-</as-split>
+  </div>
+</div>
