--- a/src/app/side-brands/side-brands.component.html
+++ b/src/app/side-brands/side-brands.component.html
@@ -1,4 +1,23 @@
-<p *ngFor="let item of brands">
-  {{ item.name }}
-  <img [src]="item.icon" [alt]="item.name" srcset="" />
-</p>
+<div
+  class="h-[38rem] mt-4 p-3 grid grid-cols-2 gap-2 grid-flow-row overflow-x-hidden overflow-y-scroll visible-scroll-v scroll-smooth"
+>
+  <div *ngFor="let item of brands.length ? brands : [].constructor(10)">
+    <div
+      class="flex flex-col items-center justify-center rounded-md"
+      *ngIf="brands.length; else shimmer"
+    >
+      <img [src]="item.icon" />
+      <p class="text-md text-white font-roboto">
+        {{ item.name | titlecase }}
+      </p>
+    </div>
+    <ng-template #shimmer>
+      <div class="flex flex-col h-48 items-center justify-evenly w-full">
+        <div class="bg-slate-700 w-full h-40 animate-fade-in-out-0"></div>
+        <div
+          class="bg-slate-600 w-full h-4 animate-fade-in-out-0 rounded-sm"
+        ></div>
+      </div>
+    </ng-template>
+  </div>
+</div>
