--- a/src/app/side-pallete/side-pallete.component.html
+++ b/src/app/side-pallete/side-pallete.component.html
@@ -1,5 +1,5 @@
 <div
-  class="h-[90%] w-[23.7rem] overflow-y-scroll mt-5 p-4 grid grid-cols-4 gap-x-5 gap-y-3 gradient-scroll-v overflow-x-hidden"
+  class="h-[38rem] overflow-y-scroll mt-5 p-4 grid grid-cols-4 gap-x-5 gap-y-3 visible-scroll-v overflow-x-hidden scroll-smooth"
 >
   <div
     class="flex flex-col items-center justify-evenly"
@@ -10,7 +10,7 @@
       [ngStyle]="{ background: asset.color }"
     ></div>
     <p
-      class="w-20 pl-3 font-mono bg-opacity-20 bg-slate-600 border-2 border-t-0 rounded-b-md"
+      class="w-20 pl-3 font-mono bg-opacity-20 bg-slate-600 border-2 border-t-0 text-white rounded-b-md"
       [ngStyle]="{ 'border-color': asset.color }"
     >
       {{ asset.color | uppercase }}
