added fonts and dark mode persistance

--- a/src/app/canva/canva.component.html
+++ b/src/app/canva/canva.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex flex-col overflow-y-scroll h-[36.8rem] bg-zinc-900 justify-start dark:dark-scroll-v scroll-smooth"
+  class="flex flex-col overflow-y-scroll h-[36.95rem] bg-zinc-900 dark:dark-scroll-v scroll-smooth"
 >
   <div
     *ngFor="let e of [].constructor(10)"
