--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="{ dark: darkMode }" class="h-full m-0">
   <div
-    class="flex flex-row p-2 justify-between items-center bg-gray-100 dark:bg-slate-900/75 transition-colors duration-700 dark:bg-opacity-70 dark:backdrop-blur fixed top-0 min-w-full dark:text-neutral-200 z-50 border-b border-b-slate-900/75 shadow-lg"
+    class="flex flex-row p-2 justify-between items-center bg-gray-100 dark:bg-zinc-900/75 transition-colors duration-900 dark:bg-opacity-60 dark:backdrop-blur fixed top-0 min-w-full dark:text-neutral-200 z-50 border-b border-b-slate-900/75 shadow-lg"
   >
     <div
       class="flex items-end hover:cursor-pointer hover:opacity-60"
@@ -15,21 +15,38 @@
         BRANDROCKET
       </p>
     </div>
-    <div class="flex">
+    <div class="flex items-center w-32 space-x-2">
       <button
         mat-icon-button
-        (click)="darkMode = !darkMode"
-        [ngClass]="darkMode ? 'text-yellow-300' : 'text-slate-600'"
+        (click)="changeDarkMode()"
+        [ngClass]="darkMode ? 'text-yellow-300' : 'text-zinc-800'"
         aria-label="theme-toggle"
       >
-        <mat-icon> {{ darkMode ? "light_mode" : "dark_mode" }}</mat-icon>
+        <mat-icon class="text-3xl min-w-full">
+          {{ darkMode ? "light_mode" : "dark_mode" }}</mat-icon
+        >
       </button>
-      <button mat-button (click)="login()">Login</button>
-      <button mat-button (click)="logout()">Logout</button>
+      <button
+        *ngIf="!isLoggedIn; else loggedOut"
+        class="py-1 text-lg font-roboto flex items-center"
+        (click)="login()"
+        [ngClass]="darkMode ? 'btn-pu' : 'btn-pu-f'"
+      >
+        Login
+      </button>
+      <ng-template #loggedOut>
+        <button
+          class="py-1 text-lg font-roboto flex items-center"
+          [ngClass]="darkMode ? 'btn-pu' : 'btn-pu-f'"
+          (click)="logout()"
+        >
+          Logout
+        </button>
+      </ng-template>
     </div>
   </div>
   <div
-    class="dark:bg-slate-800 dark:text-neutral-100 transition-colors h-full duration-700 pt-[3.5rem]"
+    class="dark:bg-zinc-800 dark:text-neutral-100 transition-colors h-full duration-700 pt-[3.5rem]"
   >
     <router-outlet></router-outlet>
   </div>
