--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,8 +1,8 @@
-<div class="flex">
+<div class="flex h-full">
   <div class="w-1/3">
     <app-toolsbar></app-toolsbar>
   </div>
-  <div class="w-2/3">
+  <div class="w-2/3 h-full bg-zinc-900">
     <app-canvas-toolbar></app-canvas-toolbar>
     <app-canva></app-canva>
   </div>
