--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="{ dark: darkMode }" class="h-full m-0">
   <div
-    class="flex flex-row p-2 justify-between items-center bg-gray-100 dark:bg-zinc-900/75 transition-colors duration-900 dark:bg-opacity-60 dark:backdrop-blur fixed top-0 min-w-full dark:text-neutral-200 z-50 border-b border-b-slate-900/75 shadow-lg"
+    class="flex flex-row py-2 px-3 justify-between items-center bg-gray-100 dark:bg-zinc-900 transition-colors duration-900 dark:bg-opacity-80 dark:backdrop-blur fixed top-0 min-w-full dark:text-neutral-200 z-50 border-b border-b-zinc-300 dark:border-b-zinc-700 shadow-lg"
   >
     <div
       class="flex items-end hover:cursor-pointer hover:opacity-60"
@@ -15,7 +15,7 @@
         BRANDROCKET
       </p>
     </div>
-    <div class="flex items-center w-32 space-x-2">
+    <div class="flex items-center space-x-2">
       <button
         mat-icon-button
         (click)="changeDarkMode()"
