--- a/src/app/canva/canva.component.scss
+++ b/src/app/canva/canva.component.scss
@@ -74,11 +74,18 @@
   border: 20px solid white;
   background: white;
   background-repeat: no-repeat;
-  border-image-source: linear-gradient(to top, #1c2024, #242321, #171a19);
-  border-image-slice: 1;
+  // border-image-source: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%);
+  // border-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%) 1 inset;
+  // -webkit-border-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%) 1;
   background-image: url(https://images.unsplash.com/photo-1460485260172-af9d8b7c0c95?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=1920&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080);
-  background-color: rgba(0, 0, 0, 0.3);
   background-blend-mode: overlay;
+  background-color: rgba(0, 0, 0, 0.3);
+  background-image: linear-gradient(
+    43deg,
+    #4158d0 0%,
+    #c850c0 46%,
+    #ffcc70 100%
+  );
 }
 
 .header {
