--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,9 +1,9 @@
-<div class="flex h-full">
-  <div class="w-1/3">
-    <app-toolsbar></app-toolsbar>
-  </div>
-  <div class="w-2/3 h-full bg-zinc-900">
+<div class="flex h-full flex-col lg:flex-row-reverse">
+  <div class="lg:w-2/3 w-full h-full bg-zinc-900">
     <app-canvas-toolbar></app-canvas-toolbar>
     <app-canva></app-canva>
+  </div>
+  <div class="lg:w-1/3 w-full">
+    <app-toolsbar></app-toolsbar>
   </div>
 </div>
