made close functionality

--- a/src/app/canva/canva.component.html
+++ b/src/app/canva/canva.component.html
@@ -1,8 +1,8 @@
-<div class="btn-b-f sticky top-0 w-full z-10" (click)="download()">
+<div class="btn-b-f fixed top-[6.5rem] w-96 z-10" (click)="download()">
   Download
 </div>
 <div
-  class="flex lg:flex-col lg:overflow-x-hidden overflow-y-scroll overflow-x-scroll lg:h-[36.95rem] bg-zinc-900 dark:dark-scroll-v scroll-smooth lg:w-full h-full w-[20rem] flex-row"
+  class="flex lg:flex-col lg:overflow-x-hidden lg:overflow-y-scroll overflow-y-hidden overflow-x-scroll bg-zinc-900 dark:dark-scroll-v dark:dark-scroll-h scroll-smooth lg:h-full lg:w-full flex-row lg:static z-0"
 >
   <div
     *ngFor="let e of [].constructor(10)"
