--- a/src/app/canvas-toolbar/canvas-toolbar.component.html
+++ b/src/app/canvas-toolbar/canvas-toolbar.component.html
@@ -1,5 +1,5 @@
 <div
-  class="px-2 pt-3 pb-1 flex items-center justify-start space-x-1 bg-zinc-800 ring-1 ring-inset ring-zinc-700 dark:text-black w-screen lg:w-full"
+  class="px-2 pt-3 pb-1 flex items-center justify-start space-x-1 bg-zinc-800 ring-1 ring-inset ring-zinc-700 dark:text-black w-full lg:w-full fixed z-10"
 >
   <select
     id="font"
