--- a/src/app/toolsbar/toolsbar.component.html
+++ b/src/app/toolsbar/toolsbar.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex h-full overflow-y-hidden lg:flex-row flex-col-reverse w-screen lg:w-1/3 fixed bottom-0"
+  class="flex lg:h-full overflow-y-hidden lg:flex-row flex-col-reverse w-full lg:static fixed bottom-0"
 >
   <div class="flex lg:flex-col flex-row items-center bg-zinc-900 text-zinc-400">
     <div
@@ -25,6 +25,17 @@
       <p class="text-[0.70rem] pt-1">Pallete</p>
     </div>
     <div
+      title="Close"
+      (click)="toggleSideMenu('closed')"
+      class="flex flex-col hover:cursor-pointer items-center justify-between pt-2 px-2 hover:text-white rounded-r-lg w-full transition-colors duration-500"
+      [ngClass]="{
+        'bg-zinc-800  text-white rounded-r-none': sideMenu == 'closed'
+      }"
+    >
+      <mat-icon class="h-3 w-3">close</mat-icon>
+      <p class="text-[0.70rem] pt-1">Close</p>
+    </div>
+    <div
       title="Upload"
       (click)="toggleSideMenu('asset')"
       class="flex flex-col hover:cursor-pointer items-center justify-between pt-2 px-2 hover:text-white rounded-r-lg w-full transition-colors duration-500"
@@ -46,23 +57,15 @@
       <mat-icon class="h-3 w-3">trending_up</mat-icon>
       <p class="text-[0.70rem] pt-1">Brands</p>
     </div>
-    <div
-      title="Close"
-      (click)="toggleSideMenu('closed')"
-      class="flex flex-col hover:cursor-pointer items-center justify-between pt-2 px-2 hover:text-white rounded-r-lg w-full transition-colors duration-500"
-      [ngClass]="{
-        'bg-zinc-800  text-white rounded-r-none': sideMenu == 'closed'
-      }"
-    >
-      <mat-icon class="h-3 w-3">close</mat-icon>
-      <p class="text-[0.70rem] pt-1">Close</p>
-    </div>
   </div>
-  <div class="lg:max-w-fit w-full bg-zinc-800">
+  <div
+    class="lg:h-full bg-zinc-800 h-96 mx-2 rounded-t-lg lg:m-0 lg:rounded-none lg:p-0 lg:bg-opacity-100 bg-opacity-70"
+    [ngClass]="{ hidden: sideMenu === 'closed' }"
+  >
     <app-side-templates *ngIf="sideMenu === 'templates'"></app-side-templates>
     <app-side-pallete *ngIf="sideMenu === 'pallete'"></app-side-pallete>
     <app-upload-asset *ngIf="sideMenu === 'asset'"></app-upload-asset>
     <app-side-brands *ngIf="sideMenu === 'brand'"></app-side-brands>
-    <div *ngIf="sideMenu === 'closed'"></div>
+    <!-- <div class="w-0 h-0 hidden" *ngIf="sideMenu === 'closed'"></div> -->
   </div>
 </div>
