--- a/src/app/canva/canva.component.html
+++ b/src/app/canva/canva.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="box text" draggable="true" contenteditable="true">
-      <h2 class="">WHEN LIFE FUCKS YOU , FUCK IT BACK BUT HARDER</h2>
+      <h2 class="">Learn Everyday Even If You Are A Master</h2>
     </div>
 
     <div class="footer">
